<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#777"
    android:orientation="vertical" >
    
    <EditText
        android:layout_marginTop="50sp"
        android:id="@+id/tmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enteremail"
        android:inputType="textEmailAddress" >
	
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/tpass"
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterpass"
        android:ems="10"
        android:inputType="textPassword" />
    
	<LinearLayout android:layout_width="match_parent"
	    	android:layout_marginTop="30sp"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
	    <Button
	        android:id="@+id/lbtn"
	        android:layout_weight="1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="func"
	        android:text="@string/lgn" />
	
	    <Button
	        android:id="@+id/cbtn"
	        android:layout_weight="1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="func"
	        android:text="@string/cnl" />
	</LinearLayout>

</LinearLayout>
